--- a/index.html
+++ b/index.html
@@ -5279,6 +5279,6 @@ document.addEventListener('DOMContentLoaded', () => {
   <!-- Cookie Consent Banner - Load asynchronously -->
   <link rel="preload" as="style" href="assets/cookie-consent.css" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="assets/cookie-consent.css"></noscript>
-  <script src="assets/cookie-consent.js" defer></script>
+  <script src="assets/cookie-consent.js?v=2" defer></script>
 </body>
 </html>
