deploy: 3a4601ca98eb2fbf0ebaf2745ce8dc506cfcbe55

--- a/index.html
+++ b/index.html
@@ -1832,7 +1832,20 @@ button:active {
         </div>
       </div>
 
-      
+      <section class="news-banner" aria-label="Latest news">
+      <div class="news-banner-header">
+        <span class="news-banner-icon">📰</span>
+        <span>Latest News</span>
+        <a class="news-see-all" href="news.html">See all &rarr;</a>
+      </div>
+      <div class="news-items">
+        <a class="news-item" href="news-2026-02-24-thanks.html">
+          <span class="news-badge" style="background:#ff66ff">Announcement</span>
+          <span class="news-title">Thanks</span>
+          <span class="news-date">Feb 24, 2026</span>
+        </a>
+      </div>
+    </section>
 
       <!-- All Games Grid -->
       <div class="category" data-category="All Games" id="allGamesSection">
