deploy: e3a69dc912194c97835a6d8a61a4fcbd3c8cb524

--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,11 @@ button:active {
         <a class="news-see-all" href="news.html">See all &rarr;</a>
       </div>
       <div class="news-items">
-        <a class="news-item" href="news-2026-02-24-thanks.html">
+        <a class="news-item" href="news-2026-02-24-first-news.html">
+          <span class="news-badge" style="background:#ff66ff">Announcement</span>
+          <span class="news-title">First News</span>
+          <span class="news-date">Feb 24, 2026</span>
+        </a><a class="news-item" href="news-2026-02-24-thanks.html">
           <span class="news-badge" style="background:#ff66ff">Announcement</span>
           <span class="news-title">Thanks</span>
           <span class="news-date">Feb 24, 2026</span>
